# game

./: CMakeLists.txt  main.cpp  readme.md  socketClient.cpp  socketServer.cpp
src/: main.cpp
src/server/: socketClient.cpp
